Issue-#14: Organize subcommands.